# appmenu-runner

./: CMakeLists.txt  appmenu.cpp  appmenu.desktop  appmenu.h  com.canonical.AppMenu.Registrar.xml  data.h  dbusmenutypes_p.cpp  dbusmenutypes_p.h  icons.cpp  icons.h  mydbusmenuimporter.h
src/: CMakeLists.txt  LICENCE  appmenu.cpp  appmenu.desktop  appmenu.kdev4
